[gd_scene load_steps=3 format=3 uid="uid://bl4qycgacxlsq"]

[ext_resource type="Script" uid="uid://cvfnqabaspn78" path="res://Scripts/inventory/inventory_item_script.gd" id="1_ksjbn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6kb8c"]

[node name="inventory_item" type="Node2D" groups=["item"]]
script = ExtResource("1_ksjbn")
item_description = null

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6kb8c")
debug_color = Color(0.579621, 0.552178, 0, 0.42)

[node name="Interact_UI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Interact_UI"]
offset_left = 860.0
offset_top = 478.0
offset_right = 940.0
offset_bottom = 518.0
color = Color(0.109804, 0.109804, 0.109804, 0.65098)

[node name="InteractLabel" type="Label" parent="Interact_UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 290.0
offset_top = 103.0
offset_right = 370.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "Agarrar (E)"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
